Fixed some issues
-Fixed some issues related to JavaFX integration.
-Changed directory of images regarding the OS reinstallation.
-Removed module-info.java
-